--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.5.2/dist/peerjs.min.js"></script>
-  <script type="module" src="/firebase.js"></script>
-  <script type="module" src="/auth.js"></script>
-  <script type="module" src="/auth-ui.js"></script>
-  <script type="module" src="/group.js"></script>
-  <script type="module" src="/peer.js"></script>
-  <script type="module" src="/chat.js"></script>
-  <script type="module" src="/ui.js"></script>
-  <script src="/ai-assistant.js"></script>
+  <script type="module" src="/Js/firebase.js"></script>
+  <script type="module" src="/Js/auth.js"></script>
+  <script type="module" src="/Js/auth-ui.js"></script>
+  <script type="module" src="/Js/group.js"></script>
+  <script type="module" src="/Js/peer.js"></script>
+  <script type="module" src="/Js/chat.js"></script>
+  <script type="module" src="/Js/ui.js"></script>
+  <script src="/Js/ai-assistant.js"></script>
 </body>
 </html>
