--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <script type="module" src="Js/peer.js"></script>
 <script type="module" src="Js/chat.js"></script>
 <script type="module" src="Js/ui.js"></script>
-<script src="ai-assistant.js"></script>
+<script src="Js/ai-assistant.js"></script>
 
 </body>
 </html>
